# fusioncore-release

./: .zenodo.json  ADOPTERS.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakeLists_standalone.txt  CONTRIBUTING.md  Dockerfile  README.md  debian.store  mkdocs.yml  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  hardware_config_request.md
.github/workflows/: ci.yml  docker.yml  docs.yml
benchmarks/: README.md  check_prereqs.sh  make_video.py  nclt_download.sh  run_all.sh  run_one.sh
benchmarks/comparison/: DISCLAIMER.md  README.md  navsat_transform_outdoor.yaml  rl_ekf_outdoor.yaml
benchmarks/nclt/2012-01-08/: fusioncore_spike.tum  ground_truth.tum  rl_ekf_spike.tum
benchmarks/nclt/2012-01-08/results/: BENCHMARK.md  OUTAGE_TEST.md  README.md  SPIKE_TEST.md
benchmarks/nclt/2012-01-08/results_91min/: BENCHMARK.md
benchmarks/nclt/2012-01-08/results_full/: BENCHMARK.md
benchmarks/nclt/2012-02-04/results/: BENCHMARK.md
benchmarks/nclt/2012-02-04/results_full/: BENCHMARK.md
benchmarks/nclt/2012-03-31/results/: BENCHMARK.md
benchmarks/nclt/2012-03-31/results_full/: BENCHMARK.md
benchmarks/nclt/2012-05-11/results/: BENCHMARK.md  README.md
benchmarks/nclt/2012-05-11/results_full/: BENCHMARK.md
compass_msgs/: package.xml
compass_msgs/msg/: Azimuth.msg
config/: bno085_custom.yaml  clearpath_husky.yaml  duatic_mecanum.yaml  f1tenth_indoor.yaml  fusioncore.yaml  nav2_params.yaml  nclt_fusioncore.yaml  rl_ekf.yaml  vslam_imu.yaml  wheels_indoor.yaml
debian/: changelog  control  copyright  gbp.conf  rules
demo/: README.md  make_demo_bag.py  nclt_demo.launch.py  run_demo.sh
docs/: configuration.md  docker.md  getting-started.md  how-it-works.md  index.md  known-limitations.md  llms.txt  migration_from_robot_localization.md  nav2.md  simulation.md  support.md  troubleshooting.md  vs-robot-localization.md
docs/blog/posts/: benchmarking-fusioncore-vs-robot-localization-nclt.md  fusioncore-ros2-sensor-fusion-launch.md  looking-for-hardware-testers.md  rtabmap-fusioncore-icp-loop.md
docs/certified-configs/: bosch-bno085-ublox-f9p-outdoor.md  index.md  microstrain-3dm-gx3-45-segway.md  xsens-mti-680g-fsae.md
docs/guides/: delayed-gps-measurements.md  ekf-ukf-nan-divergence.md  gps-multipath-position-jumping.md  navsat-transform-startup-errors.md
docs/hardware/: ackermann.md  environment-presets.md  icp-indoor.md  index.md  vslam-imu.md  wheels-indoor.md
docs/overrides/: main.html
docs/reference/: architecture.md  benchmark.md  topics.md
fusioncore_core/: CMakeLists.txt  package.xml
fusioncore_core/include/fusioncore/: fusioncore.hpp  state.hpp  ukf.hpp
fusioncore_core/include/fusioncore/sensors/: encoder.hpp  gnss.hpp  imu.hpp  magnetometer.hpp  vslam.hpp
fusioncore_core/src/: fusioncore.cpp  motion_model.cpp  ukf.cpp
fusioncore_core/tests/: test_encoder.cpp  test_fusioncore.cpp  test_gnss.cpp  test_gnss_coast.cpp  test_gnss_manager.cpp  test_imu.cpp  test_ukf.cpp  test_vslam.cpp
fusioncore_datasets/: CMakeLists.txt  package.xml
fusioncore_datasets/config/: navsat_transform.yaml  nclt_fusioncore.yaml  rl_ekf.yaml  rl_ukf.yaml
fusioncore_datasets/launch/: nclt_benchmark.launch.py
fusioncore_datasets/scripts/: gps_cov_relay.py  nclt_player.py
fusioncore_gazebo/: CMakeLists.txt  package.xml
fusioncore_gazebo/config/: demo.rviz  fastdds_udp.xml  fusioncore_gazebo.yaml  rl_ekf_gazebo.yaml
fusioncore_gazebo/launch/: fusioncore_demo.launch.py  fusioncore_gazebo.launch.py  gz_pose_to_gps.py  integration_test.py  scenario_driver.py
fusioncore_gazebo/models/fusioncore_robot/: model.config  model.sdf
fusioncore_gazebo/worlds/: fusioncore_test.sdf
fusioncore_ros/: CMakeLists.txt  package.xml
fusioncore_ros/config/: bno085_custom.yaml  clearpath_husky.yaml  duatic_mecanum.yaml  env_canopy.yaml  env_open.yaml  env_urban.yaml  f1tenth_indoor.yaml  fusioncore.yaml  icp_indoor.yaml  nav2_params.yaml  rowcrop_rtk.yaml  van_outdoor_gps.yaml  wheels_indoor.yaml
fusioncore_ros/launch/: fusioncore.launch.py  fusioncore_duatic.launch.py  fusioncore_nav2.launch.py
fusioncore_ros/msg/: GnssStatus.msg
fusioncore_ros/src/: fusion_node.cpp
fusioncore_ros/srv/: FromLL.srv
fusioncore_ros/tests/: test_proj_axis_order.cpp
fusioncore_ublox/: CMakeLists.txt  package.xml
fusioncore_ublox/launch/: gnss_doppler_bridge.launch.py
fusioncore_ublox/src/: gnss_doppler_bridge.cpp
fusioncore_ublox/test/: test_bridge_math.py
include/fusioncore/: fusioncore.hpp  motion_model.hpp  state.hpp  ukf.hpp
include/fusioncore/sensors/: encoder.hpp  magnetometer.hpp
launch/: circle_driver.py  fusioncore.launch.py  fusioncore_gazebo.launch.py  fusioncore_nav2.launch.py  gz_pose_to_gps.py  nclt_benchmark.launch.py  path_publisher.py
models/fusioncore_robot/: model.sdf
msg/: FilterHealth.msg
rpm/: ros-humble-compass-msgs.spec  ros-humble-fusioncore-core.spec  ros-humble-fusioncore-datasets.spec  ros-humble-fusioncore-gazebo.spec  ros-humble-fusioncore-ros.spec  ros-humble-fusioncore-ublox.spec  ros-jazzy-compass-msgs.spec  ros-jazzy-fusioncore-core.spec  ros-jazzy-fusioncore-datasets.spec  ros-jazzy-fusioncore-gazebo.spec  ros-jazzy-fusioncore-ros.spec  ros-jazzy-fusioncore-ublox.spec  template.spec
src/: fusion_node.cpp  fusioncore.cpp  ukf.cpp
tests/: CMakeLists.txt  test_encoder.cpp  test_fusioncore.cpp  test_imu.cpp  test_imu_orientation_validity.cpp  test_magnetometer.cpp
tools/: benchmark_baseline.json  benchmark_regression.md  check_benchmark_regression.py  demo_quick.py  evaluate.py  evaluate_outage.py  evaluate_spike.py  field_day_checklist.md  field_record.launch.py  fusioncore_gcs.py  kpi_sheet_template.md  make_figures.py  make_paper_figures.py  nclt_gt_to_tum.py  nclt_rtk_to_tum.py  odom_to_tum.py  plot_benchmark.py  proposal_template.md  quick_test.sh  quick_test_params.yaml  spike_injector.py
worlds/: fusioncore_outdoor.sdf  fusioncore_test.sdf
(+19 files in other folders)
