<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fusioncore_core</name>
  <version>0.3.3</version>
  <description>Pure C++ UKF sensor fusion library underlying FusionCore. Fuses IMU, wheel encoders, GPS, and visual SLAM pose in a 23-state unscented Kalman filter. Includes ECEF GPS conversion, online gyro/accel/encoder bias estimation, adaptive noise covariance, chi-squared outlier gating, ZUPT, and GPS-denied operation. No ROS dependency, usable standalone.</description>
  <maintainer email="manan.kharwar@ansys.com">Manan Kharwar</maintainer>
  <license>Apache-2.0</license>
  <url type="website">https://github.com/manankharwar/fusioncore</url>
  <url type="repository">https://github.com/manankharwar/fusioncore</url>
  <url type="bugtracker">https://github.com/manankharwar/fusioncore/issues</url>
  <url type="documentation">https://manankharwar.github.io/fusioncore</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>eigen3_cmake_module</depend>
  <depend>eigen</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <test_depend>ament_cmake_gtest</test_depend>
</package>
