<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fusioncore_ublox</name>
  <version>0.3.3</version>
  <description>Bridge nodes for u-blox GPS receivers: converts raw NavPVT Doppler velocity to nav_msgs/Odometry for FusionCore (gnss.velocity_topic). Optional companion to fusioncore_ros; not required to build or run FusionCore.</description>
  <maintainer email="manan.kharwar@ansys.com">Manan Kharwar</maintainer>
  <license>Apache-2.0</license>
  <url type="website">https://github.com/manankharwar/fusioncore</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <!-- ublox_msgs is optional: gnss_doppler_bridge is only built when it is installed.
       Install with: sudo apt install ros-$ROS_DISTRO-ublox-msgs -->


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
