<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fusioncore_ros</name>
  <version>0.1.1</version>
  <description>FusionCore ROS 2 Jazzy wrapper — sensor fusion node</description>
  <maintainer email="kharwarm@mcmaster.ca">FusionCore</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>compass_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>fusioncore_core</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
